--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -16,22 +16,15 @@ jobs:
       - run: npm install
       - run: npm run build --if-present
 
-      # ( Build to ./dist or other directory... )
-
-      - name: Deploy to Netlify
-        uses: nwtgck/actions-netlify@v1.2
+      - name: Deploy to Heorku
+        uses: akhileshns/heroku-deploy@v3.12.12
         with:
-          #args: deploy --dir=build --prod
-          #secrets: '["NETLIFY_AUTH_TOKEN", "NETLIFY_SITE_ID"]'
-          publish-dir: './build'
-          production-branch: main
-          production-deploy: false
-          #github-token: ${{ secrets.GITHUB_TOKEN }}
-          deploy-message: "Deploy from GitHub Actions"
-          #enable-pull-request-comment: false
-          #enable-commit-comment: true
-          #overwrites-pull-request-comment: true
+          branch: dev
+          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+          heroku_app_name: "zuut-dev" #Must be unique in Heroku
+          heroku_email: "zuutheroku@gmail.com"
+          #healthcheck: true // save for later
+          #delay: 30 // saving for healthcheck if we want it later, set to 30 secs
         env:
-          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
-          NETLIFY_SITE_ID: ${{ secrets.DEV_NETLIFY_SITE_ID }}
-        timeout-minutes: 2
+          HEROKU_API_KEY: ${{secrets.HEROKU_API_KEY}}
+        #timeout-minutes: 2
