--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,11 +13,12 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: 12.x
-     
-      - name: Cypress run
-        uses: cypress-io/github-action@v1
-        with:
-          build: npm run build
-          start: npm start
-          wait-on: http://localhost:3000
-          browser: chrome
+      
+      ### figure out which testing pipeline to use
+      #- name: Cypress run
+      #  uses: cypress-io/github-action@v1
+      #  with:
+      #    build: npm run build
+      #    start: npm start
+      #    wait-on: http://localhost:3000
+      #    browser: chrome
