--- a/.github/workflows/stage.yml
+++ b/.github/workflows/stage.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Deploy to Heorku
         uses: akhileshns/heroku-deploy@v3.12.12
         with:
-          branch: dev
+          branch: main
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "zuut-qa" #Must be unique in Heroku
           heroku_email: "zuutheroku@gmail.com"
