--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -2,24 +2,51 @@ name: Development Workflow
 on:
   push:
     branches:
-      - dev
+      - main
 jobs:
-  build:
+  setup:
     runs-on: ubuntu-18.04
-
     steps:
       - uses: actions/checkout@v2
       - name: Use Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: 12.x
+          node-version: "15.14.0"
       - run: npm install
+
+  build:
+    runs-on: ubuntu-18.04
+    needs: setup
+    steps:
+      - uses: actions/checkout@v2
+      - name: Use Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: "15.14.0"
+      - run: npm install
+
       - run: npm run build --if-present
 
-      - name: Deploy to Heorku
+      - name: Upload build artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: build
+          path: build
+
+  deploy:
+    runs-on: ubuntu-18.04
+    needs:
+      - build
+    steps:
+      - uses: actions/checkout@v2
+      - name: Download build artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: build
+
+      - name: Deploy to development environment
         uses: akhileshns/heroku-deploy@v3.12.12
         with:
-          branch: dev
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "zuut-dev" #Must be unique in Heroku
           heroku_email: "zuutheroku@gmail.com"
