--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -33,10 +33,24 @@ jobs:
           name: build
           path: build
 
+  test:
+    runs-on: ubuntu-18.04
+    needs: setup
+    steps:
+      - uses: actions/checkout@v2
+      - name: Use Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: "15.14.0"
+      - run: npm install
+
+      - run: npm run ci-test
+
   deploy:
     runs-on: ubuntu-18.04
     needs:
       - build
+      - test
     steps:
       - uses: actions/checkout@v2
       - name: Download build artifact
