[#ZPM-28] Publish unit test results

--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -33,7 +33,7 @@ jobs:
           name: build
           path: build
 
-  test:
+  unit_test:
     runs-on: ubuntu-18.04
     needs: setup
     env:
@@ -46,13 +46,20 @@ jobs:
           node-version: "15.14.0"
       - run: npm ci
 
-      - run: npm test
+      - name: Run unit tests
+        run: npm test -- --reporters=default --reporters=jest-junit
+
+      - name: Publish unit Test Results
+        uses: EnricoMi/publish-unit-test-result-action@v1
+        if: always()
+        with:
+          files: test-results/**/*.xml
 
   deploy:
     runs-on: ubuntu-18.04
     needs:
       - build
-      - test
+      - unit_test
     steps:
       - uses: actions/checkout@v2
       - name: Download build artifact
