--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Test Workflow
+name: test
 on:
   pull_request:
     branches:
@@ -13,7 +13,7 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: 12.x
-      
+
       ### figure out which testing pipeline to use
       #- name: Cypress run
       #  uses: cypress-io/github-action@v1
