--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
   "scripts": {
     "build": "react-scripts build",
     "eject": "react-scripts eject",
-    "format": "eslint --fix src/**/*.ts{,x}",
-    "lint": "tsc --noEmit && eslint src/**/*.ts{,x}",
+    "format": "eslint --fix src",
+    "lint": "tsc --noEmit && eslint src",
     "start": "react-scripts start",
     "test": "react-scripts test"
   },
@@ -47,8 +47,8 @@
       "react-app/jest"
     ],
     "rules": {
-      "quotes": [2, "single", "avoid-escape"],
-      "testing-library/prefer-screen-queries": 0
+      "quotes": ["error", "single", "avoid-escape"],
+      "testing-library/prefer-screen-queries": "off"
     }
   },
   "browserslist": {
