--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^24.9.1",
+    "@types/jest-axe": "^3.5.3",
     "@types/node": "^12.20.38",
     "@types/react": "^16.14.21",
     "@types/react-dom": "^16.9.14",
@@ -15,8 +16,6 @@
     "@typescript-eslint/eslint-plugin": "^5.8.0",
     "@typescript-eslint/parser": "^5.8.0",
     "eslint": "^8.5.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-airbnb-typescript": "^16.1.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-jest": "^25.3.0",
@@ -24,6 +23,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "jest-axe": "^5.0.1",
     "jest-junit": "^13.0.0",
     "prettier": "^2.5.1",
     "react": "^17.0.2",
@@ -47,7 +47,12 @@
       "react-app/jest"
     ],
     "rules": {
-      "quotes": ["error", "single", "avoid-escape"],
+      "quotes": [
+        "error",
+        "single",
+        "avoid-escape"
+      ],
+      "semi": ["error", "always"],
       "testing-library/prefer-screen-queries": "off"
     }
   },
@@ -62,9 +67,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@types/jest-axe": "^3.5.3",
-    "jest-axe": "^5.0.1"
   }
 }
