--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -12,6 +12,7 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: "15.14.0"
+          cache: 'npm'
       - run: npm ci
 
   build:
@@ -23,6 +24,7 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: "15.14.0"
+          cache: 'npm'
       - run: npm ci
 
       - run: npm run build --if-present
@@ -44,6 +46,7 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: "15.14.0"
+          cache: 'npm'
       - run: npm ci
 
       - name: Run unit tests
