--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,8 @@ jobs:
       - name: Use Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: 12.x
+          node-version: "15.14.0"
+          cache: 'npm'
 
       ### figure out which testing pipeline to use
       #- name: Cypress run
