--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,12 +14,5 @@ jobs:
         with:
           node-version: "15.14.0"
           cache: 'npm'
-
-      ### figure out which testing pipeline to use
-      #- name: Cypress run
-      #  uses: cypress-io/github-action@v1
-      #  with:
-      #    build: npm run build
-      #    start: npm start
-      #    wait-on: http://localhost:3000
-      #    browser: chrome
+      - run: npm install
+      - run: npm test
