--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "typescript": "~4.1.5",
-    "web-vitals": "^2.1.2"
+    "web-vitals": "^2.1.2",
+    "taiko": "latest",
+    "@getgauge/cli": "latest"
   },
   "scripts": {
     "build": "react-scripts build",
@@ -40,7 +42,7 @@
     "format": "eslint --fix src",
     "lint": "tsc --noEmit && eslint src",
     "start": "react-scripts start",
-    "test": "react-scripts test",
+    "test": "gauge run specs",
     "dev:noauth": "REACT_APP_DISABLE_AUTH=true npm start"
   },
   "eslintConfig": {
