--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@types/react": "^16.14.21",
     "@types/react-dom": "^16.9.14",
     "@types/react-redux": "^7.1.21",
+    "@types/redux-logger": "^3.0.9",
+    "@types/uuid": "^8.3.3",
     "@typescript-eslint/eslint-plugin": "^5.8.0",
     "@typescript-eslint/parser": "^5.8.0",
     "eslint": "^8.5.0",
@@ -29,11 +31,14 @@
     "prettier": "^2.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.22.5",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "redux-logger": "^3.0.6",
     "taiko": "latest",
     "typescript": "~4.1.5",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
@@ -64,7 +69,8 @@
         "always"
       ],
       "testing-library/prefer-screen-queries": "off"
-    }
+    },
+    "ignorePatterns": ["**/*.js"]
   },
   "browserslist": {
     "production": [
