--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,7 +29,7 @@ jobs:
       - name: browser-tests
         uses: actions/setup-node@v2
         with:
-          node-version: "15.14.0"
+          node-version: "16.x"
           cache: 'npm'
       - run: npm install
       - run: npm run taiko-test
