--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "lint": "tsc --noEmit && eslint src",
     "start": "react-scripts start",
     "test": "react-scripts test",
-    "taiko-test": "cd src/tests/taiko-tests && gauge run specs",
+    "taiko-test": "cd src/tests/taiko-tests && npm install && gauge run specs",
     "dev:noauth": "REACT_APP_DISABLE_AUTH=true npm start"
   },
   "eslintConfig": {
