--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@auth0/auth0-react": "^1.8.0",
+    "@babel/preset-typescript": "^7.16.7",
     "@getgauge/cli": "latest",
     "@reduxjs/toolkit": "^1.7.1",
     "@testing-library/jest-dom": "^5.16.1",
@@ -28,10 +29,12 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "jest-axe": "^5.0.1",
     "jest-junit": "^13.0.0",
+    "konva": "^8.3.2",
     "prettier": "^2.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.22.5",
+    "react-konva": "^17.0.2-5",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
@@ -70,7 +73,9 @@
       ],
       "testing-library/prefer-screen-queries": "off"
     },
-    "ignorePatterns": ["**/*.js"]
+    "ignorePatterns": [
+      "**/*.js"
+    ]
   },
   "browserslist": {
     "production": [
