--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "prettier": "^2.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-full-page": "^0.1.12",
     "react-hook-form": "^7.22.5",
     "react-konva": "^17.0.2-5",
     "react-redux": "^7.2.6",
