--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "eject": "react-scripts eject",
     "format": "eslint --fix src",
     "lint": "tsc --noEmit && eslint src",
+    "prepush": "npm run lint -- --max-warnings=0 && CI=true npm test",
     "start": "react-scripts start",
     "test": "react-scripts test",
     "taiko-test": "cd src/tests/taiko-tests && npm install && gauge run specs",
