--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -63,6 +63,7 @@ jobs:
           node-version: '15.14.0'
           cache: 'npm'
       - run: npm ci
+      - run: npm run dev:noauth &
       - run: npm run taiko-test
 
   deploy:
