--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^12.20.38",
     "@types/react": "^16.14.21",
     "@types/react-dom": "^16.9.14",
+    "@types/react-helmet": "6.1.5",
     "@types/react-redux": "^7.1.21",
     "@types/redux-logger": "^3.0.9",
     "@types/uuid": "^8.3.3",
@@ -34,6 +35,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-full-page": "^0.1.12",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^7.22.5",
     "react-konva": "^17.0.2-5",
     "react-redux": "^7.2.6",
