--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -71,6 +71,7 @@ jobs:
     needs:
       - build
       - unit_test
+      - browser-tests
     steps:
       - uses: actions/checkout@v2
       - name: Download build artifact
