--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "konva": "^8.3.2",
     "prettier": "^2.5.1",
     "react": "^17.0.2",
+    "react-dnd": "^14.0.5",
+    "react-dnd-html5-backend": "^14.1.0",
     "react-dom": "^17.0.2",
     "react-full-page": "^0.1.12",
     "react-helmet": "^6.1.0",
@@ -66,6 +68,7 @@
       "prettier"
     ],
     "rules": {
+      "@typescript-eslint/no-unused-vars": ["error", { "varsIgnorePattern": ".*" }],
       "quotes": [
         "error",
         "single",
