--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/react-hooks": "^7.0.2",
     "eslint-config-prettier": "^8.3.0"
   }
 }
