--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "redux-logger": "^3.0.6",
     "taiko": "latest",
     "typescript": "~4.1.5",
+    "use-image": "^1.0.8",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.2"
   },
