--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "eject": "react-scripts eject",
     "format": "eslint --fix src",
     "lint": "tsc --noEmit && eslint src",
-    "prepush": "npm run lint -- --max-warnings=0 && CI=true npm test",
+    "prepush": "npm run lint -- --max-warnings=0 && CI=true npm test && npm run taiko-test",
     "start": "react-scripts start",
     "test": "react-scripts test",
     "taiko-test": "gauge run specs",
