--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "react-dnd-html5-backend": "^14.1.0",
     "react-dom": "^17.0.2",
     "react-full-page": "^0.1.12",
-    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^1.2.2",
     "react-hook-form": "^7.22.5",
     "react-konva": "^17.0.2-5",
     "react-redux": "^7.2.6",
