--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
     "@types/jest": "^27.4.0",
     "@types/node": "^17.0.16",
     "jest": "^27.5.1",
+    "jest-junit": "^13.0.0",
     "nodemon": "^2.0.15",
     "ts-jest": "^27.1.3",
     "ts-node": "^10.5.0",
