--- a/ui/package.json
+++ b/ui/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.5.8",
     "@auth0/auth0-react": "^1.8.0",
     "@babel/preset-typescript": "^7.16.7",
     "@getgauge/cli": "latest",
@@ -28,6 +29,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "graphql": "^16.3.0",
     "jest-axe": "^5.0.1",
     "jest-junit": "^13.0.0",
     "konva": "^8.3.2",
@@ -60,7 +62,7 @@
     "test": "react-scripts test",
     "taiko-test": "gauge run specs",
     "dev:noauth": "REACT_APP_DISABLE_AUTH=true npm start",
-    "dev": "REACT_APP_DISABLE_AUTH=true REACT_APP_TEST_PLAYGROUND=true npm start"
+    "dev": "npm start"
   },
   "eslintConfig": {
     "extends": [
