add start script to top-level package.json, hoping to fix heroku deploy

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "type": "commonjs",
   "scripts": {
+    "start": "nf -p 3000 start",
     "dev": "nf -p 3000 start",
     "prepush": "cd backend && npm test && cd ../ui && npm run prepush"
   },
