--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "index.js",
   "type": "commonjs",
   "scripts": {
-    "start": "nf -p 3000 start",
+    "start": "cd ui && npm start",
     "dev": "nf -p 3000 start",
-    "prepush": "cd backend && npm test && cd ../ui && npm run prepush"
+    "prepush": "cd backend && npm test && cd ../ui && npm run prepush",
+    "preinstall": "cd ui && npm install"
   },
   "keywords": [],
   "author": "Zuut",
