Revert "add preinstall script to root-level package.json so Heroku will install UI dependencies, and make top-level start script just run the ui application. i think we'll need to reconfigure our Heroku dynos to get deploys as defined in the Procfile"
This reverts commit 4aa7d78a486325944da13bdedd10eb50eafc9e16.

--- a/package.json
+++ b/package.json
@@ -5,10 +5,9 @@
   "main": "index.js",
   "type": "commonjs",
   "scripts": {
-    "start": "cd ui && npm start",
+    "start": "nf -p 3000 start",
     "dev": "nf -p 3000 start",
-    "prepush": "cd backend && npm test && cd ../ui && npm run prepush",
-    "preinstall": "cd ui && npm install"
+    "prepush": "cd backend && npm test && cd ../ui && npm run prepush"
   },
   "keywords": [],
   "author": "Zuut",
