--- a/backend/package.json
+++ b/backend/package.json
@@ -20,11 +20,13 @@
     "apollo-server-express": "^3.6.3",
     "express": "^4.17.2",
     "express-http-proxy": "^1.6.3",
+    "express-jwt": "^6.1.0",
     "graphql": "^16.3.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/express-http-proxy": "^1.6.3",
+    "@types/express-jwt": "^6.0.4",
     "@types/jest": "^27.4.0",
     "@types/node": "^17.0.16",
     "jest": "^27.5.1",
