--- a/backend/package.json
+++ b/backend/package.json
@@ -15,13 +15,16 @@
   "author": "Zuut",
   "license": "ISC",
   "dependencies": {
+    "apollo-datasource-mongodb": "^0.5.2",
     "apollo-server": "^3.6.3",
     "apollo-server-core": "^3.6.3",
     "apollo-server-express": "^3.6.3",
     "express": "^4.17.2",
     "express-http-proxy": "^1.6.3",
     "express-jwt": "^6.1.0",
-    "graphql": "^16.3.0"
+    "graphql": "^16.3.0",
+    "jwks-rsa": "^2.0.5",
+    "mongodb": "^4.3.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
