--- a/package.json
+++ b/package.json
@@ -6,11 +6,21 @@
   "type": "commonjs",
   "scripts": {
     "dev": "nf -p 3000 start",
-    "prepush": "cd backend && npm test && cd ../ui && npm run prepush"
+    "prepush": "cd backend && npm test && cd ../ui && npm run prepush",
+    "codegen": "graphql-codegen --config codegen.yml"
   },
   "keywords": [],
   "author": "Zuut",
   "dependencies": {
     "foreman": "^3.0.1"
+  },
+  "devDependencies": {
+    "@graphql-codegen/cli": "2.6.1",
+    "@graphql-codegen/introspection": "2.1.1",
+    "@graphql-codegen/typescript": "2.4.3",
+    "@graphql-codegen/typescript-mongodb": "2.3.1",
+    "@graphql-codegen/typescript-operations": "2.3.0",
+    "@graphql-codegen/typescript-react-apollo": "3.2.5",
+    "@graphql-codegen/typescript-resolvers": "2.5.0"
   }
 }
