--- a/backend/package.json
+++ b/backend/package.json
@@ -22,9 +22,11 @@
     "express": "^4.17.2",
     "express-http-proxy": "^1.6.3",
     "express-jwt": "^6.1.0",
+    "express-winston": "^4.2.0",
     "graphql": "^16.3.0",
     "jwks-rsa": "^2.0.5",
-    "mongodb": "^4.3.1"
+    "mongodb": "^4.3.1",
+    "winston": "^3.6.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
