--- a/.env.development.example
+++ b/.env.development.example
@@ -1,3 +1,5 @@
+AUTH0_AUDIENCE=ZiG0fuIV7rhOvYedlOXAL5wwl6FyLHid
+AUTH0_ISSUER=https://dev-baqlbrdt.us.auth0.com/
 BROWSER=none
 JWKS_URL=https://dev-baqlbrdt.us.auth0.com/.well-known/jwks.json
 MONGODB_URL=mongodb://localhost:3200/dev?retryWrites=true&w=majority
