--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -4,17 +4,6 @@ on:
     branches:
       - main
 jobs:
-  build:
-    runs-on: ubuntu-18.04
-    steps:
-      - uses: actions/checkout@v2
-      - name: Build
-        uses: docker/build-push-action@v2
-        with:
-          context: ./
-          file: ./Dockerfile
-          push: false
-
   ui_unit_test:
     runs-on: ubuntu-18.04
     env:
@@ -33,21 +22,12 @@ jobs:
         run: npm test -- --reporters=default --reporters=jest-junit
         working-directory: ./ui
 
-  ui_browser_tests:
+  browser_tests:
     runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v2
-      - name: browser-tests
-        uses: actions/setup-node@v2
-        with:
-          node-version: "15.14.0"
-          cache: "npm"
-      - run: npm ci
-        working-directory: ./ui
-      - run: npm run dev:noauth &
-        working-directory: ./ui
-      - run: npm run taiko-test
-        working-directory: ./ui
+      - run: docker-compose build
+      - run: docker-compose run browser_tests
 
   backend_unit_test:
     runs-on: ubuntu-18.04
@@ -70,9 +50,8 @@ jobs:
   deploy:
     runs-on: ubuntu-18.04
     needs:
-      - build
       - ui_unit_test
-      - ui_browser_tests
+      # - browser_tests
       - backend_unit_test
     steps:
       - uses: actions/checkout@v2
