--- a/Dockerfile.browser_tests
+++ b/Dockerfile.browser_tests
@@ -10,7 +10,7 @@ FROM node
 # However, we need the chromium dependencies installed in the environment. These days, most 
 # Dockerfiles just install chrome to get the dependencies.
 RUN apt-get update \
-  && apt-get install -y wget gnupg ca-certificates \
+  && apt-get install -y wget gnupg ca-certificates xvfb \
   && wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add - \
   && sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google.list' \
   && apt-get update \
