--- a/docker-compose.bak.yml
+++ b/docker-compose.bak.yml
@@ -17,14 +17,14 @@ services:
   mongodb:
     image: mongo
 
-  browser_tests:
-    build:
-      context: .
-      dockerfile: Dockerfile.browser_tests
-    platform: "linux/amd64"
-    depends_on:
-      - app
-    environment:
-      START_URL: http://app:3000/
-      TAIKO_USERNAME: zuuttestuser@gmail.com
-      TAIKO_PASSWORD: ZUUTtester123!
+  # browser_tests:
+  #   build:
+  #     context: .
+  #     dockerfile: Dockerfile.browser_tests
+  #   platform: "linux/amd64"
+  #   depends_on:
+  #     - app
+  #   environment:
+  #     START_URL: http://app:3000/
+  #     TAIKO_USERNAME: zuuttestuser@gmail.com
+  #     TAIKO_PASSWORD: ZUUTtester123!
