--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -4,43 +4,30 @@ on:
     branches:
       - main
 jobs:
-  # ui_unit_test:
-  #   runs-on: ubuntu-18.04
-  #   env:
-  #     CI: "true"
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #     - name: Use Node.js
-  #       uses: actions/setup-node@v2
-  #       with:
-  #         node-version: "15.14.0"
-  #         cache: "npm"
-  #     - run: npm ci
-  #       working-directory: ./ui
-
-  #     - name: Run unit tests
-  #       run: npm test -- --reporters=default --reporters=jest-junit
-  #       working-directory: ./ui
-
-  # browser_tests:
-  #   runs-on: ubuntu-18.04
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #     - run: docker-compose build
-  #     - run: docker-compose run browser_tests
-
-  cypress-run:
-    runs-on: ubuntu-latest
+  ui_unit_test:
+    runs-on: ubuntu-18.04
+    env:
+      CI: "true"
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - run: docker-compose build
-      - run: docker-compose run app
-
-      - name: Cypress run
-        uses: cypress-io/github-action@v2
+      - uses: actions/checkout@v2
+      - name: Use Node.js
+        uses: actions/setup-node@v2
         with:
-          start: npm run dev
+          node-version: "15.14.0"
+          cache: "npm"
+      - run: npm ci
+        working-directory: ./ui
+
+      - name: Run unit tests
+        run: npm test -- --reporters=default --reporters=jest-junit
+        working-directory: ./ui
+
+  browser_tests:
+    runs-on: ubuntu-18.04
+    steps:
+      - uses: actions/checkout@v2
+      - run: docker-compose build
+      - run: docker-compose run browser_tests
 
   backend_unit_test:
     runs-on: ubuntu-18.04
@@ -63,10 +50,9 @@ jobs:
   deploy:
     runs-on: ubuntu-18.04
     needs:
-      # - ui_unit_test
+      - ui_unit_test
       # - browser_tests
-      # - backend_unit_test
-      - cypress-run
+      - backend_unit_test
     steps:
       - uses: actions/checkout@v2
       - name: Deploy to development environment
