[ZPM-51] Save misc items to mongodb

--- a/ui/package.json
+++ b/ui/package.json
@@ -18,6 +18,7 @@
     "@types/react-dom": "^16.9.14",
     "@types/react-helmet": "6.1.5",
     "@types/react-redux": "^7.1.21",
+    "@types/react-router": "^5.1.18",
     "@types/redux-logger": "^3.0.9",
     "@types/testing-library__cypress": "^5.0.9",
     "@types/uuid": "^8.3.3",
@@ -25,6 +26,7 @@
     "@typescript-eslint/parser": "^5.8.0",
     "canvas": "^2.9.0",
     "clsx": "^1.1.1",
+    "connected-react-router": "^6.9.2",
     "eslint": "^8.5.0",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-jest": "^25.3.0",
@@ -46,7 +48,7 @@
     "react-hook-form": "^7.22.5",
     "react-konva": "^17.0.2-5",
     "react-redux": "^7.2.6",
-    "react-router-dom": "^6.2.1",
+    "react-router": "^5.2.0",
     "react-scripts": "5.0.0",
     "redux-logger": "^3.0.6",
     "taiko": "latest",
