--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,7 @@
     "dev": "tsc-watch --onSuccess \"npm run watch\"",
     "start": "node dist/index.js",
     "test": "jest",
-    "watch": "nodemon --watch './**/*.{ts,graphql}' --exec 'node --experimental-specifier-resolution=node --loader ts-node/esm' src/index.ts"
+    "watch": "nodemon --watch './**/*.{ts,graphql}' --exec 'node --experimental-specifier-resolution=node --loader ts-node/esm' index.ts"
   },
   "keywords": [],
   "author": "Zuut",
