move eslintConfig back to ui/package.json, keep .prettierrc at project root level

--- a/ui/package.json
+++ b/ui/package.json
@@ -88,5 +88,34 @@
     "transformIgnorePatterns": [
       "<rootDir>/node_modules/(?!konva)"
     ]
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest",
+      "plugin:jsx-a11y/recommended",
+      "prettier"
+    ],
+    "rules": {
+      "@typescript-eslint/no-unused-vars": [
+        "error",
+        {
+          "varsIgnorePattern": ".*"
+        }
+      ],
+      "quotes": [
+        "error",
+        "single",
+        "avoid-escape"
+      ],
+      "semi": [
+        "error",
+        "always"
+      ],
+      "testing-library/prefer-screen-queries": "off"
+    },
+    "ignorePatterns": [
+      "**/*.js"
+    ]
   }
 }
