--- a/ui/package.json
+++ b/ui/package.json
@@ -24,7 +24,6 @@
     "@types/uuid": "^8.3.3",
     "@typescript-eslint/eslint-plugin": "^5.8.0",
     "@typescript-eslint/parser": "^5.8.0",
-    "canvas": "^2.9.0",
     "clsx": "^1.1.1",
     "connected-react-router": "^6.9.2",
     "eslint": "^8.5.0",
@@ -85,7 +84,8 @@
     "@testing-library/cypress": "^8.0.2",
     "@testing-library/react-hooks": "^7.0.2",
     "cypress": "^9.5.0",
-    "eslint-config-prettier": "^8.3.0"
+    "eslint-config-prettier": "^8.3.0",
+    "canvas": "^2.9.0"
   },
   "jest": {
     "transformIgnorePatterns": [
