--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -62,7 +62,7 @@ jobs:
     runs-on: ubuntu-18.04
     needs:
       - ui_unit_test
-      # - browser_tests
+      - browser_tests
       - backend_unit_test
     steps:
       - uses: actions/checkout@v2
