--- a/ui/package.json
+++ b/ui/package.json
@@ -48,6 +48,7 @@
     "react-router": "^5.2.0",
     "react-scripts": "5.0.0",
     "redux-logger": "^3.0.6",
+    "redux-thunk-error-handler": "^1.1.4",
     "typescript": "~4.1.5",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.2"
@@ -76,8 +77,8 @@
   },
   "devDependencies": {
     "@testing-library/react-hooks": "^7.0.2",
-    "eslint-config-prettier": "^8.3.0",
-    "canvas": "^2.9.0"
+    "canvas": "^2.9.0",
+    "eslint-config-prettier": "^8.3.0"
   },
   "jest": {
     "transformIgnorePatterns": [
