--- a/ui/package.json
+++ b/ui/package.json
@@ -49,6 +49,7 @@
     "react-scripts": "5.0.0",
     "redux-logger": "^3.0.6",
     "redux-thunk-error-handler": "^1.1.4",
+    "redux-undo": "^1.0.1",
     "typescript": "~4.1.5",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.2"
