--- a/ui/package.json
+++ b/ui/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^24.9.1",
     "@types/jest-axe": "^3.5.3",
+    "@types/mixpanel-browser": "^2.38.0",
     "@types/node": "^12.20.38",
     "@types/react": "^16.14.21",
     "@types/react-dom": "^16.9.14",
@@ -35,6 +36,7 @@
     "jest-axe": "^5.0.1",
     "jest-junit": "^13.0.0",
     "konva": "^8.3.2",
+    "mixpanel-browser": "^2.45.0",
     "prettier": "^2.5.1",
     "react": "^17.0.2",
     "react-dnd": "^14.0.5",
