--- a/ui/package.json
+++ b/ui/package.json
@@ -42,6 +42,7 @@
     "react-dnd": "^14.0.5",
     "react-dnd-html5-backend": "^14.1.0",
     "react-dom": "^17.0.2",
+    "react-error-boundary": "^3.1.4",
     "react-full-page": "^0.1.12",
     "react-helmet-async": "^1.2.2",
     "react-hook-form": "^7.22.5",
