--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -76,4 +76,5 @@ jobs:
           #delay: 30 // saving for healthcheck if we want it later, set to 30 secs
         env:
           HEROKU_API_KEY: ${{secrets.HEROKU_API_KEY}}
+          REACT_APP_MIXPANEL_TOKEN: 'e5d2699a9fe25e45c53c85472e799725'
         #timeout-minutes: 2
