--- a/ui/package.json
+++ b/ui/package.json
@@ -65,7 +65,7 @@
     "prepush": "npm run lint -- --max-warnings=0 && CI=true npm test",
     "start": "env BROWSER=none react-scripts start",
     "test": "react-scripts test",
-    "dev": "REACT_APP_MIXPANEL_TOKEN=e5d2699a9fe25e45c53c85472e799725 npm start"
+    "dev": "npm start"
   },
   "browserslist": {
     "production": [
