--- a/ui/package.json
+++ b/ui/package.json
@@ -47,6 +47,7 @@
     "react-helmet-async": "^1.2.2",
     "react-hook-form": "^7.22.5",
     "react-konva": "^17.0.2-5",
+    "react-modal": "^3.14.4",
     "react-redux": "^7.2.6",
     "react-router": "^5.2.0",
     "react-scripts": "5.0.0",
@@ -81,6 +82,7 @@
   },
   "devDependencies": {
     "@testing-library/react-hooks": "^7.0.2",
+    "@types/react-modal": "^3.13.1",
     "canvas": "^2.9.0",
     "eslint-config-prettier": "^8.3.0"
   },
