--- a/.github/workflows/stage.yml
+++ b/.github/workflows/stage.yml
@@ -2,7 +2,7 @@ name: qa
 on:
   push:
     tags:
-      - "q*"
+      - 'q*'
 jobs:
   build:
     runs-on: ubuntu-18.04
@@ -13,10 +13,13 @@ jobs:
         uses: akhileshns/heroku-deploy@v3.12.12
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: "zuut-qa" #Must be unique in Heroku
-          heroku_email: "zuutheroku@gmail.com"
+          heroku_app_name: 'zuut-qa' #Must be unique in Heroku
+          heroku_email: 'zuutheroku@gmail.com'
+          usedocker: true
           #healthcheck: true // save for later
           #delay: 30 // saving for healthcheck if we want it later, set to 30 secs
+          docker_build_args: |
+            MIXPANEL_TOKEN
         env:
-          HEROKU_API_KEY: ${{secrets.HEROKU_API_KEY}}
+          MIXPANEL_TOKEN: '810aad09e3363f2bb1fe86461e06959a'
         #timeout-minutes: 2
