upgrade react scripts, hoping to fix CI issue

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "keywords": [],
   "author": "Zuut",
   "dependencies": {
-    "foreman": "^3.0.1"
+    "foreman": "^3.0.1",
+    "react-scripts": "5.0.1"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "2.6.1",
