use airtable DB for Pots in objects tab

--- a/ui/package.json
+++ b/ui/package.json
@@ -23,6 +23,7 @@
     "@types/uuid": "^8.3.3",
     "@typescript-eslint/eslint-plugin": "^5.8.0",
     "@typescript-eslint/parser": "^5.8.0",
+    "airtable": "^0.11.4",
     "clsx": "^1.1.1",
     "connected-react-router": "^6.9.2",
     "eslint": "^8.5.0",
@@ -48,6 +49,7 @@
     "react-hook-form": "^7.22.5",
     "react-konva": "^17.0.2-5",
     "react-modal": "^3.14.4",
+    "react-query": "^3.39.1",
     "react-redux": "^7.2.6",
     "react-router": "^5.2.0",
     "react-scripts": "5.0.0",
