--- a/ui/package.json
+++ b/ui/package.json
@@ -6,6 +6,7 @@
     "@apollo/client": "^3.5.9",
     "@auth0/auth0-react": "^1.8.0",
     "@babel/preset-typescript": "^7.16.7",
+    "@material-ui/core": "^4.12.4",
     "@reduxjs/toolkit": "^1.7.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
