--- a/ui/package.json
+++ b/ui/package.json
@@ -20,6 +20,7 @@
     "@types/react-helmet": "6.1.5",
     "@types/react-redux": "^7.1.21",
     "@types/react-router": "^5.1.18",
+    "@types/react-router-dom": "^5.3.3",
     "@types/redux-logger": "^3.0.9",
     "@types/uuid": "^8.3.3",
     "@typescript-eslint/eslint-plugin": "^5.8.0",
@@ -53,7 +54,9 @@
     "react-query": "^3.39.1",
     "react-redux": "^7.2.6",
     "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
+    "redux-first-history": "^5.1.1",
     "redux-logger": "^3.0.6",
     "redux-thunk-error-handler": "^1.1.4",
     "redux-undo": "^1.0.1",
